# gem-assist

./: .gitignore  LICENSE  README.md  assistant.py  config.py  gem_assist.py  ollama_assist.py  ollama_assist_old.py  pyproject.toml  test.py  utility.py
func_to_schema/: __init__.py
gem/: __init__.py  builtin_commands.py  command.py  inspection.py  prompting.py  utils.py
tests/: conftest.py  test_commands.py  test_func_to_schema.py
